# fsi_knowledge_catalog_demo

./: .gitignore  README.md  clean_up.sh  deploy-bq.sh  deploy-existing-project.sh  deploy-full.sh  deploy.sh  post_deploy.sh  pyproject.toml  terragrunt.hcl
agents/: deploy_agents.sh
agents/agent_basic/: agent.py
agents/agent_kc/: .env.example  agent.py  requirements.txt
agents/agent_scaled/: .env.example  agent.py  requirements.txt
demo/: agent_comparison.ipynb  demo_questions.md  demo_script.md
env/: existing-project.tfvars  new-project.tfvars
eval/: metrics.py  report.py  requirements.txt  run_eval.py  test_cases.yaml  vertex_eval.py
modules/apis/: main.tf
modules/bigquery-dashboards/: main.tf
modules/bigquery-medallion/: main.tf
modules/bigquery-reference/: main.tf
modules/data-catalog-taxonomy/: main.tf
modules/dataplex-entry-types/: main.tf
modules/networking/: main.tf
modules/project/: main.tf
modules/service-account/: main.tf
scripts/: 00_create_dataplex_infra.py  01_create_glossary.py  02_create_scans.py  03_create_source_entries.py  04_create_aspects.py  05_create_data_products.py  06_create_glossary_links.py  07_create_lineage.py  08_publish_scans.py  09_simulate_queries.py  10_create_rule_library.py  11_run_scans_and_apply_insights.py  12_enrich_glossary.py  13_apply_insights_descriptions.py  14_link_glossary_to_assets.py  15_inject_dirty_data.py  16_create_policy_tags.py  17_enrich_new_terms.py  common.py
website/: Dockerfile  app.py  deploy.sh  requirements.txt
website-live/: Dockerfile  app.py  deploy.sh
(+145 files in other folders)
